# stereo_calibration_check

./: CLAUDE.md  README.md  epipolar_chessboard.py  example_chessboard.py  example_recalibrate.py  example_redistort.py  example_stereo.py  pyproject.toml  pytest.ini  rectifiy.py
calibrate/: distort.py  stereo_calibrate.py  undistort.py
data/calibration/: thermal_left.yaml  thermal_right.yaml
epipolar_calibration_check/: epipolar_line.py
feature_detection/: corners.py  sift.py
src/stereo_calibration_check/: main.py
src/stereo_calibration_check/calibrate/: stereo_calibrate.py
src/stereo_calibration_check/epipolar_calibration_check/: epipolar_line.py
src/stereo_calibration_check/feature_detection/: corners.py
src/stereo_calibration_check/utils/: visualization.py
tests/: README.md  __init__.py  conftest.py  test_baseline.py  test_cli.py
utils/: file_utils.py  visualization.py
