[project]
name = "stereo-calibration-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pyqt6>=6.10.1",
    "python-lsp-server[all]>=1.14.0",
    "pyyaml>=6.0.3",
]
