[project]
name = "stereo-calibration-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib",
    "numpy>=1.26.0",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11",
    "pyqt6>=6.10.1",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
stereo-calibration-check = "stereo_calibration_check.main:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
